# cornerstone

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/cornerstone_cli/: __init__.py  _ulid.py  attest.py  cli.py  config.py  confine.py  diff.py  ledger.py  render.py  session.py  snapshot.py
tests/: test_attest.py  test_attest_integration.py  test_cli.py  test_confine.py  test_diff.py  test_units.py
